# cuopt

./: .gitignore  PREDICTOR_DATA_COLLECTION.md  build.sh
cpp/src/: CMakeLists.txt
cpp/src/barrier/: barrier.cu  cusparse_view.cu
cpp/src/branch_and_bound/: branch_and_bound.cpp
cpp/src/dual_simplex/: CMakeLists.txt  barrier.cu  basis_solves.cpp  basis_updates.cpp  bb_event.hpp  bb_worker_state.hpp  bnb_worker.cpp  bnb_worker.hpp  bounds_strengthening.cpp  bounds_strengthening.hpp  branch_and_bound.cpp  branch_and_bound.hpp  bsp_debug.hpp  crossover.cpp  deterministic_workers.hpp  device_sparse_matrix.cu  diving_heuristics.cpp  diving_heuristics.hpp  diving_queue.hpp  dual_simplex_features.hpp  folding.cpp  initial_basis.cpp  mip_node.hpp  node_queue.hpp  phase2.cpp  presolve.cpp  primal.cpp  pseudo_costs.cpp  pseudo_costs.hpp  right_looking_lu.cpp  right_looking_lu.hpp  simplex_solver_settings.hpp  singletons.cpp  singletons.hpp  solve.cpp  solve.hpp  sparse_matrix.cpp  sparse_matrix.hpp  sparse_vector.cpp  sparse_vector.hpp  (+5 more)
cpp/src/linear_programming/: CMakeLists.txt  backend_selection.cpp  cpu_optimization_problem.cpp  cpu_pdlp_warm_start_data.cu  cuopt_c.cpp  cuopt_c_internal.hpp  cusparse_view.cu  cusparse_view.hpp  optimization_problem.cu  pdhg.cu  pdhg.hpp  pdlp.cu  pdlp.cuh  pdlp_climber_strategy.hpp  pdlp_features.hpp  saddle_point.cu  saddle_point.hpp  solution_conversion.cu  solve.cu  solve.cuh  solve_remote.cu  solver_settings.cu  solver_solution.cu  swap_and_resize_helper.cuh  utils.cuh
cpp/src/linear_programming/initial_scaling_strategy/: initial_scaling.cu  initial_scaling.cuh
cpp/src/linear_programming/optimal_batch_size_handler/: optimal_batch_size_handler.cu
cpp/src/linear_programming/restart_strategy/: localized_duality_gap_container.cu  localized_duality_gap_container.hpp  pdlp_restart_strategy.cu  pdlp_restart_strategy.cuh
cpp/src/linear_programming/step_size_strategy/: adaptive_step_size_strategy.cu  adaptive_step_size_strategy.hpp
cpp/src/linear_programming/termination_strategy/: convergence_information.cu  convergence_information.hpp  infeasibility_information.cu  infeasibility_information.hpp  termination_strategy.cu  termination_strategy.hpp
cpp/src/linear_programming/utilities/: cython_solve.cu  problem_checking.cu
cpp/src/math_optimization/: solver_settings.cu
cpp/src/mip/: CMakeLists.txt  solve.cu  solver.cu  solver.cuh  solver_context.cuh  utils.cuh
cpp/src/mip/diversity/: diversity_config.hpp  diversity_manager.cu  diversity_manager.cuh  multi_armed_bandit.cuh  population.cu  population.cuh
cpp/src/utilities/: copy_helpers.hpp  cuda_helpers.cuh  embed_models.sh  logger.cpp  memory_instrumentation.hpp  producer_sync.hpp  seed_generator.cuh  timer.hpp  version_info.cpp  version_info.hpp  work_limit_context.hpp  work_limit_timer.hpp  work_unit_predictor.cpp  work_unit_predictor.hpp  work_unit_scheduler.cpp  work_unit_scheduler.hpp
(+121 files in other folders)
